--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         please contact the sales department at sales@jahia.com.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" >
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.jahia.modules</groupId>
@@ -61,10 +61,9 @@
     <connection>scm:git:git@github.com:pvollenweider/bootstrap4-templates.git</connection>
     <developerConnection>scm:git:git@github.com:pvollenweider/bootstrap4-templates.git</developerConnection>
   <url>scm:git:https://github.com/pvollenweider/bootstrap4-templates.git</url>
-    <tag>HEAD</tag>
-  </scm>
+    </scm>
   <properties>
-    <jahia-depends>bootstrap4-components,bootstrap4-core,default,jquery,popperjs</jahia-depends>
+    <jahia-depends>default,jquery,popperjs,bootstrap4-components,bootstrap4-core</jahia-depends>
   </properties>
   <repositories>
     <repository>
