--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         please contact the sales department at sales@jahia.com.
 
 -->
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" >
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.jahia.modules</groupId>
@@ -53,7 +53,7 @@
   </parent>
   <groupId>org.jahia.modules</groupId>
   <artifactId>bootstrap4-templates</artifactId>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.1</version>
   <packaging>bundle</packaging>
   <name>bootstrap4-templates</name>
   <description>This is the custom profile module (bootstrap4-templates) for running on a Digital Experience Manager server.</description>
@@ -61,7 +61,8 @@
     <connection>scm:git:git@github.com:pvollenweider/bootstrap4-templates.git</connection>
     <developerConnection>scm:git:git@github.com:pvollenweider/bootstrap4-templates.git</developerConnection>
   <url>scm:git:https://github.com/pvollenweider/bootstrap4-templates.git</url>
-    </scm>
+      <tag>bootstrap4-templates-1.1</tag>
+  </scm>
   <properties>
     <jahia-depends>default,jquery,popperjs,bootstrap4-components,bootstrap4-core</jahia-depends>
   </properties>
