--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
   <parent>
     <groupId>org.jahia.modules</groupId>
     <artifactId>jahia-modules</artifactId>
-    <version>7.2.0.1</version>
+    <version>7.3.0.1</version>
   </parent>
   <groupId>org.jahia.modules</groupId>
   <artifactId>bootstrap4-templates</artifactId>
@@ -64,7 +64,7 @@
       <tag>HEAD</tag>
   </scm>
   <properties>
-    <jahia-depends>default,jquery,popperjs,bootstrap4-components,bootstrap4-core</jahia-depends>
+    <jahia-depends>default,bootstrap4-components</jahia-depends>
   </properties>
   <repositories>
     <repository>
